# multicorn-shield

./: .env.dev  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  eslint.config.ts  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/hooks/: multicorn-shield.json
.github/workflows/: ci.yml  multicorn-ops-review.yml  publish-npm.yml  publish-python.yml  publish.yml  security-scan.yml
demos/: README.md  tsconfig.json
demos/email-deletion/: generate-inbox.ts  prompt.txt  reset.sh
demos/hit-piece/: prompt.txt  reset.sh  setup.sh
docs/: desktop-extension-research.md
docs/adr/: 001-use-lit-for-consent-screen.md  002-open-source-sdk-hosted-backend.md  003-mcp-native-as-primary-protocol.md  004-typescript-sdk-kotlin-backend.md  005-copy-shared-types-between-repos.md
docs/api/: hierarchy.html  index.html
examples/: consent-vanilla.html  test-consent.html
plugins/cline/: README.md
plugins/codex-cli/: README.md
python/: LICENSE  README.md  pyproject.toml
python/multicorn_shield/: __init__.py  client.py  exceptions.py  models.py
python/tests/: test_async_client.py  test_client.py  test_models.py
scripts/: generate-changelog.mjs  stage-local-proxy-server.mjs
src/: index.ts  mcp-tool-mapper.test.ts  mcp-tool-mapper.ts  multicorn-shield.test.ts  multicorn-shield.ts  package-meta.ts
(+228 files in other folders)
